<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCreate">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_tv_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/login_username"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/login_edt_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/login_edt_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="14"
            android:hint="@string/login_username"
            app:layout_constraintBottom_toTopOf="@+id/login_tv_02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_01" />

        <TextView
            android:id="@+id/login_tv_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/login_password"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/login_edt_02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_edt_01" />

        <EditText
            android:id="@+id/login_edt_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:ems="14"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/login_bt_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_02" />

        <Button
            android:id="@+id/login_bt_01"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="#FFFFFF"
            android:text="@string/login_submit_button"
            app:layout_constraintBottom_toTopOf="@+id/login_tv_03"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_edt_02" />

        <TextView
            android:id="@+id/login_tv_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="250dp"
            android:clickable="true"
            android:text="@string/login_forgot_link"
            android:textColor="@color/light_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_bt_01" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>